fix header z-index styles & revert shadow

--- a/src/core/organisms/header/header.scss
+++ b/src/core/organisms/header/header.scss
@@ -17,6 +17,7 @@
 }
 
 .header-content {
+  position: relative;
   display: inherit;
   grid-column: content;
   grid-template-columns: auto minmax(0, 1fr) repeat(2, auto);
@@ -25,6 +26,25 @@
     'nav nav nav nav';
   place-items: center start;
   white-space: nowrap;
+
+  &:after {
+    display: block;
+    content: '';
+    position: absolute;
+    z-index: 2;
+    right: -30vw;
+    left: -30vw;
+    pointer-events: none;
+    top: unset;
+    bottom: -5px;
+    height: 5px;
+    box-shadow: inset 0 1px 0 0 rgba(68, 87, 106, 0.15),
+    inset 0 4px 8px -3px rgba(68, 87, 106, 0.15);
+
+    @include mobile-tablet {
+      content: unset;
+    }
+  }
 
   @include mobile-tablet {
     grid-column: full;
@@ -554,8 +574,8 @@
       [full-end];
     position: absolute;
     min-height: 100vh;
-    left: 0;
-    right: 0;
+    left: -30vw;
+    right: -30vw;
     background: rgba(10, 13, 16, 0.25);
     pointer-events: none;
     place-items: start stretch;
@@ -595,6 +615,8 @@
 
 @include desktop {
   .menu-secondary--wrapper-inner {
+    position: relative;
+    z-index: 2;
     grid-column: content;
     grid-auto-columns: minmax(0, 2fr);
     grid-auto-flow: column;
